unpackaged/main/default/objects/Survey_Response__c/Survey_Response__c.object-meta.xml
<CustomObject>
    <description>Records the customer satisfaction survey response completed from formassembly.</description>
    <label>Survey Response</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>