unpackaged/main/default/objects/Survey_Response__c/fields/Application_Difficulty__c.field-meta.xml
<CustomField>
    <fullName>Application_Difficulty__c</fullName>
    <inlineHelpText>How quick and easy was it to apply or renew? 1 = Very Difficult. 5 = Very Easy.</inlineHelpText>
    <label>Application Difficulty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X1_5_Rating</valueSetName>
    </valueSet>
</CustomField>