unpackaged/main/default/objects/Survey_Response__c/fields/Application_Difficulty_Why__c.field-meta.xml
<CustomField>
    <fullName>Application_Difficulty_Why__c</fullName>
    <label>Application Difficulty - Why</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>