unpackaged/main/default/objects/Survey_Response__c/fields/Communication_Rating__c.field-meta.xml
<CustomField>
    <fullName>Communication_Rating__c</fullName>
    <inlineHelpText>How clear, friendly and informative were our communications? 1 = Very Bad. 5 = Very  Good.</inlineHelpText>
    <label>Communication Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X1_5_Rating</valueSetName>
    </valueSet>
</CustomField>