unpackaged/main/default/objects/Survey_Response__c/fields/Communication_Rating_Why__c.field-meta.xml
<CustomField>
    <fullName>Communication_Rating_Why__c</fullName>
    <label>Communication Rating - Why</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>