unpackaged/main/default/objects/Survey_Response__c/fields/Don_t_Like_About_RSPCA_Assured_Other__c.field-meta.xml
<CustomField>
    <fullName>Don_t_Like_About_RSPCA_Assured_Other__c</fullName>
    <label>Don&#39;t Like About RSPCA Assured - Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>