unpackaged/main/default/objects/Survey_Response__c/fields/How_helpful_was_our_team__c.field-meta.xml
<CustomField>
    <fullName>How_helpful_was_our_team__c</fullName>
    <inlineHelpText>How helpful was our team? 1 = Very Unhelpful. 5 = Very Helpful. N/A = Not Applicable.</inlineHelpText>
    <label>How helpful was our team?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>