unpackaged/main/default/objects/Survey_Response__c/fields/How_helpful_was_our_team_Why__c.field-meta.xml
<CustomField>
    <fullName>How_helpful_was_our_team_Why__c</fullName>
    <inlineHelpText>How helpful was our team? - Why?</inlineHelpText>
    <label>How helpful was our team? - Why?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>