unpackaged/main/default/objects/Survey_Response__c/fields/Like_about_RSPCA_Assured_Other__c.field-meta.xml
<CustomField>
    <fullName>Like_about_RSPCA_Assured_Other__c</fullName>
    <label>Like about RSPCA Assured - Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>