unpackaged/main/default/objects/Survey_Response__c/fields/Likely_to_recommend_RSPCA__c.field-meta.xml
<CustomField>
    <fullName>Likely_to_recommend_RSPCA__c</fullName>
    <inlineHelpText>How likely is it that you would recommend RSPCAAssured to a friend or colleague? 1 = NOT AT ALL LIKELY. 10 = EXTREMELY LIKELY.</inlineHelpText>
    <label>Likely to recommend RSPCA Assured</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>