unpackaged/main/default/objects/Survey_Response__c/fields/Overall_Happiness_Why__c.field-meta.xml
<CustomField>
    <fullName>Overall_Happiness_Why__c</fullName>
    <label>Overall Happiness - Why</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>