unpackaged/main/default/objects/Survey_Response__c/fields/Overall_Happiness_With_RSPCA_Assured__c.field-meta.xml
<CustomField>
    <fullName>Overall_Happiness_With_RSPCA_Assured__c</fullName>
    <inlineHelpText>How happy are you with RSPCAAssured overall? 1 = VERY UNHAPPY. 5 = VERY HAPPY.</inlineHelpText>
    <label>Overall Happiness With RSPCA Assured</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X1_5_Rating</valueSetName>
    </valueSet>
</CustomField>