unpackaged/main/default/objects/Survey_Response__c/fields/What_do_you_like_about_RSPCAAssured__c.field-meta.xml
<CustomField>
    <fullName>What_do_you_like_about_RSPCAAssured__c</fullName>
    <inlineHelpText>What do you like about RSPCAAssured?</inlineHelpText>
    <label>What do you like about RSPCAAssured?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RSPCA welfare standards</fullName>
            </value>
            <value>
                <fullName>Cost of membership</fullName>
            </value>
            <value>
                <fullName>Cost of licence fees</fullName>
            </value>
            <value>
                <fullName>Convenience or flexibility of booking an assessment</fullName>
            </value>
            <value>
                <fullName>Promotional support received</fullName>
            </value>
            <value>
                <fullName>Service provided by the member services team</fullName>
            </value>
            <value>
                <fullName>Service provided by assessors</fullName>
            </value>
            <value>
                <fullName>Speed and/or ease of service</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>